--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -7,7 +7,7 @@ layout: default
 
   <h2 style="text-align: center;">
   If you want to leave your footprints 
-  on the same of time,<BR>
+  on the sand of time,<BR>
   do not drag your feet!<BR>
   </h2>
   <h3 style="text-align: right;">- Dr. APJ Abdul Kalam</h3>
