--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -6,11 +6,10 @@ layout: default
   <hr/>
 
   <h2 style="text-align: center;">
-  If you want to leave your footprints 
-  on the sand of time,<BR>
-  do not drag your feet!<BR>
+  You cannot build a reputation 
+  by what you are going to do!<BR>
   </h2>
-  <h3 style="text-align: right;">- Dr. APJ Abdul Kalam</h3>
+  <h3 style="text-align: right;">- Henry Ford</h3>
   <hr/>
   <BR/>
   {%- if page.title -%}
