home update feature update

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -6,10 +6,10 @@ layout: default
   <hr/>
 
   <h2 style="text-align: center;">
-  You cannot build a reputation 
-  by what you are going to do!<BR>
+  If you want to shine like the sun,
+  first burn like the sun!<BR>
   </h2>
-  <h3 style="text-align: right;">- Henry Ford</h3>
+  <h3 style="text-align: right;">- APJ Abdul Kalam</h3>
   <hr/>
   <BR/>
   {%- if page.title -%}
