--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -6,10 +6,10 @@ layout: default
   <hr/>
 
   <h2 style="text-align: center;">
-  If you want to shine like the sun,
-  first burn like the sun!<BR>
+    Creativity is allowing yourself to make mistakes.
+    Art is knowing which ones to keep!<BR>
   </h2>
-  <h3 style="text-align: right;">- APJ Abdul Kalam</h3>
+  <h3 style="text-align: right;">- Scott Adams</h3>
   <hr/>
   <BR/>
   {%- if page.title -%}
