--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -6,10 +6,9 @@ layout: default
   <hr/>
 
   <h2 style="text-align: center;">
-    Creativity is allowing yourself to make mistakes.
-    Art is knowing which ones to keep!<BR>
+    Give people more than they expect and do it cheerfully!<BR>
   </h2>
-  <h3 style="text-align: right;">- Scott Adams</h3>
+  <h3 style="text-align: right;">- Unknown</h3>
   <hr/>
   <BR/>
   {%- if page.title -%}
